--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
     <div>
-      <button id="write">Test</button>
+      <button id="write" name="Test">Test</button>
   </body>
 </html>
