--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="origin-trial" content="ArDsrODl4vGv3BC3DcouPrvaZnHmCgtoDIUixC6ei2jum8W4xKkNnPdS9Cdv27uHrt7vTVZDofmjWPk8DFr5fwcAAABSeyJvcmlnaW4iOiJodHRwczovL2xyYXpvdmljLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViTkZDIiwiZXhwaXJ5IjoxNTk1OTgwNzk5fQ==">
     <title>Web NFC Test</title>
     <script src="./webnfc.js" type="module"></script>
+    <link href="./style.css" rel="stylesheet">
   </head>
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
-    <div>
-      <button id="write" name="Test">Test</button>
+    <div class="container">
+      <button id="write" name="gc">Giulio Cesare</button>
+      <button id="write" name="ca">Augusto</button>
+    </div>
   </body>
 </html>
