class instead a singles id

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
     <div class="container">
-      <button id="write" name="gc">Giulio Cesare</button>
-      <button id="write" name="ca">Augusto</button>
+      <button class="write" name="gc">Giulio Cesare</button>
+      <button class="write" name="ca">Augusto</button>
     </div>
   </body>
 </html>
