--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
+    <h3>Tap a button to select an Hologram</h3>
     <div class="container">
       <button class="write" name="gc">Giulio Cesare</button>
       <button class="write" name="ca">Augusto</button>
     </div>
+    <h3 id="message"></h3>
   </body>
 </html>
