async/await syntax

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="origin-trial" content="ArDsrODl4vGv3BC3DcouPrvaZnHmCgtoDIUixC6ei2jum8W4xKkNnPdS9Cdv27uHrt7vTVZDofmjWPk8DFr5fwcAAABSeyJvcmlnaW4iOiJodHRwczovL2xyYXpvdmljLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViTkZDIiwiZXhwaXJ5IjoxNTk1OTgwNzk5fQ==">
+    <meta
+      http-equiv="origin-trial"
+      content="ArDsrODl4vGv3BC3DcouPrvaZnHmCgtoDIUixC6ei2jum8W4xKkNnPdS9Cdv27uHrt7vTVZDofmjWPk8DFr5fwcAAABSeyJvcmlnaW4iOiJodHRwczovL2xyYXpvdmljLmdpdGh1Yi5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViTkZDIiwiZXhwaXJ5IjoxNTk1OTgwNzk5fQ=="
+    />
     <title>Web NFC Test</title>
     <script src="./webnfc.js" type="module"></script>
-    <link href="./style.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
