--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <h3>Tap on a statue to select an Hologram</h3>
     <h3 id="message"></h3>
     <div class="container">
-      <button class="write" name="gc">
+      <button class="write">
         <div class="card">
           <div class="header">
             <p>Giulio Cesare</p>
           </div>
           <div class="containerCard">
-            <img src="./images/gc.png" style="height: 400px;" />
+            <img src="./images/gc.png" style="height: 400px;" name="gc"/>
           </div>
         </div>
       </button>
@@ -32,7 +32,7 @@
             <p>Cesare Auguto</p>
           </div>
           <div class="containerCard">
-            <img src="./images/ca.png" style="height: 400px;"/>
+            <img src="./images/ca.png" style="height: 400px;"name="ca"/>
           </div>
         </div>
       </button>
