--- a/index.html
+++ b/index.html
@@ -17,24 +17,10 @@
     <h3 id="message"></h3>
     <div class="container">
       <button class="write">
-        <div class="card">
-          <div class="header">
-            <p>Giulio Cesare</p>
-          </div>
-          <div class="containerCard">
-            <img src="./images/gc.png" style="height: 400px;" name="gc"/>
-          </div>
-        </div>
+        Giulio Cesare
       </button>
       <button class="write" name="ca">
-        <div class="card">
-          <div class="header">
-            <p>Cesare Auguto</p>
-          </div>
-          <div class="containerCard">
-            <img src="./images/ca.png" style="height: 400px;"name="ca"/>
-          </div>
-        </div>
+        Cesare Auguto
       </button>
     </div>
   </body>
