--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Web NFC Test</title>
     <script src="./webnfc.js" type="module"></script>
     <link href="./style.css" rel="stylesheet" />
+    <link rel="manifest" href="./manifest.webmanifest">
+
   </head>
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
