--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <title>Web NFC Test</title>
     <script src="./webnfc.js" type="module"></script>
     <link href="./style.css" rel="stylesheet" />
-    <link rel="manifest" href="./manifest.webmanifest">
-
+    <link rel="manifest" href="./manifest.webmanifest" />
   </head>
   <body style="padding: 1rem;">
     <h2 style="color: rosybrown;">WEB NFCAPI</h2>
     <h3>Tap on a statue to select an Hologram</h3>
     <h3 id="message"></h3>
     <div class="container">
-      <button class="write">
+      <button class="write" name="gc">
         Giulio Cesare
       </button>
       <button class="write" name="ca">
